SITE_URL -> URL_ORIGIN

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-SITE_NAME=LazyWebApp
-SITE_URL=https://lazywebapp.link
+# Making a change to this site? make sure to add/remove the element from the
+# config.js, or will won't be checked
 
+SITE_NAME=LazyWebApp
+
+# URL_ORIGIN is selected in config.js
 URL_ORIGIN_LOCAL=http://localhost:4200
-URL_ORIGIN_DEV=http://localhost:4200
-URL_ORIGIN_PROD=http://localhost:4200
+URL_ORIGIN_DEV=https://dev.lazywebapp.com
+URL_ORIGIN_PROD=https://lazywebapp.com
 
 MONGODB_URI_LOCAL=mongodb://lazywebapp:password@localhost:27017/lazywebapp
 MONGODB_URI_DEV=mongodb://lazywebapp:password@localhost:27017/lazywebapp
