--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ JWT_KEY=defaultsecretkey
 JWT_REFRESH_TOKEN_KEY=defaultsecretkey
 
 SENDGRID_API_KEY=YOUR_API_KEY
+
+FACEBOOK_APP_ID=
+TWITTER_HANDLE=lazywebapp
