--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
+    "classlist.js": "^1.1.20150312",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
