--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
+    "ngx-webstorage": "^3.0.0-beta.13",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
