Upgrade and uninstall packages

--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.106",
     "@types/moment": "^2.13.0",
-    "angular-2-local-storage": "^2.0.0",
     "angular-font-awesome": "^3.1.2",
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
@@ -54,7 +53,7 @@
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
     "ngx-webstorage": "^3.0.0-beta.13",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.10.0",
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -64,7 +63,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular-devkit/build-angular": "^0.10.5",
     "@angular/cli": "^7.0.5",
     "@angular/compiler-cli": "7.0.3",
     "@angular/language-service": "7.0.3",
@@ -77,12 +76,12 @@
     "eslint-config-google": "^0.9.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "3.1.6"
