change db ts to js

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/moment": "^2.13.0",
     "angular-font-awesome": "^3.1.2",
     "bcrypt": "^3.0.2",
-    "bluebird": "^3.5.1",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.2",
     "classlist.js": "^1.1.20150312",
@@ -59,6 +59,7 @@
     "passport-local": "^1.0.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.1.0",
+    "sqlite3": "^4.0.4",
     "validator": "^10.2.0",
     "zone.js": "^0.8.26"
   },
@@ -67,6 +68,7 @@
     "@angular/cli": "^7.0.5",
     "@angular/compiler-cli": "7.0.3",
     "@angular/language-service": "7.0.3",
+    "@types/bluebird-global": "^3.5.9",
     "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
