--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "helmet": "^3.15.0",
     "jsonwebtoken": "^8.2.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
