--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Making a change to this site? make sure to add/remove the element from the
-# config.js, or will won't be checked
+# Making a change to this site? Make sure to add/remove the element from the
+# config.js, or will won't be checked.
 
 SITE_NAME=LazyWebApp
 
