--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.106",
     "@types/moment": "^2.13.0",
+    "@types/zxcvbn": "^4.4.0",
     "angular-font-awesome": "^3.1.2",
     "bcrypt": "^3.0.2",
     "bluebird": "^3.5.1",
@@ -61,7 +62,8 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.1.0",
     "validator": "^10.2.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.5",
