--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/dist": true,
-  }
+  },
+  "editor.renderWhitespace": "all"
 }
