Some of progress and styles work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/dist": true,
-  }
+  },
+  "cSpell.words": [
+    "validators",
+    "zxcvbn"
+  ]
 }
