--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/moment": "^2.13.0",
     "@types/zxcvbn": "^4.4.0",
     "angular-font-awesome": "^3.1.2",
+    "aws-sdk": "^2.382.0",
     "bcrypt": "^3.0.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -54,6 +55,8 @@
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "ngx-webstorage": "^3.0.0-beta.13",
     "node-sass": "^4.10.0",
     "nodemon": "^1.17.4",
