--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     "@angular/service-worker": "7.0.3",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@sendgrid/mail": "^6.2.1",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/jwt-decode": "^2.2.1",
-    "@types/lodash": "^4.14.106",
+    "@types/lodash": "^4.14.119",
     "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.3.6",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/validator": "^10.9.0",
     "@types/zxcvbn": "^4.4.0",
     "angular-font-awesome": "^3.1.2",
     "bcrypt": "^3.0.2",
