--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcrypt": "^3.0.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.2.1",
     "chart.js": "^2.7.2",
     "classlist.js": "^1.1.20150312",
     "concurrently": "^3.5.1",
