Add experimental decorators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
     "validators",
     "zxcvbn"
   ],
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "javascript.implicitProjectConfig.experimentalDecorators": true
 }
