--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mongoose": "^5.0.16",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "ngx-image-cropper": "^1.3.4",
     "ngx-webstorage": "^3.0.0-beta.13",
     "node-sass": "^4.10.0",
     "nodemon": "^1.17.4",
