--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
