--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,9 @@ SENDGRID_API_KEY=YOUR_API_KEY
 
 FACEBOOK_APP_ID=
 TWITTER_HANDLE=lazywebapp
+
+# Google Cloud Storage Credentials - Ask James for GCS_KEYFILE.
+
+GCS_BUCKET=app-ng-dev
+GCLOUD_PROJECT=lazywebapp-madhavan
+GCS_KEYFILE= google_cloud_credentials.json
