--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-server": "7.0.3",
     "@angular/router": "7.0.3",
     "@angular/service-worker": "7.0.3",
+    "@google-cloud/storage": "^2.3.4",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@sendgrid/mail": "^6.2.1",
     "@types/jsonwebtoken": "^8.3.0",
@@ -63,6 +64,7 @@
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
     "multer": "^1.4.1",
+    "multer-google-storage": "^1.2.1",
     "multer-s3": "^2.9.0",
     "ngx-image-cropper": "^1.3.4",
     "ngx-webstorage": "^3.0.0-beta.13",
