MongoDB Atlas issue

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ MONGODB_URI_LOCAL=mongodb://lazywebapp:password@localhost:27017/lazywebapp
 MONGODB_URI_DEV=mongodb://lazywebapp:password@localhost:27017/lazywebapp
 MONGODB_URI_PROD=mongodb://lazywebapp:password@localhost:27017/lazywebapp
 
+# IMPORTANT NOTE (to possibly be removed later): remove the 'retryWrites' parameter fixes circular dependency issue on mongoDB Atlas
+# https://github.com/Automattic/mongoose/issues/6109
+
 JWT_KEY=defaultsecretkey
 JWT_REFRESH_TOKEN_KEY=defaultsecretkey
 
