--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,15 @@ SENDGRID_API_KEY=YOUR_API_KEY
 FACEBOOK_APP_ID=
 TWITTER_HANDLE=lazywebapp
 
+# Set image service below. If none is set, local storage will be used by default
+
 # Google Cloud Storage Credentials
-GCS_BUCKET=app-ng-dev
+GCS_BUCKET=# Set bucket name here
 GCLOUD_PROJECT=lazywebapp
-GCS_KEYFILE=google_cloud_credentials.json
+GCS_KEYFILE= Google_Credentials/google_cloud_credentials.json
+
+# Amazon Web Services
+AWS_ACCESS_KEY_ID= # Set AWS Access Key here
+AWS_SECRET_ACCESS_KEY= # Set AWS Secret Access Key here
+region=us-east-2
+AWS_BUCKET=# Set bucket name here
