--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/lodash": "^4.14.119",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.3.6",
+    "@types/multer": "^1.3.7",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
     "@types/validator": "^10.9.0",
