code review update - image service

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ TWITTER_HANDLE=lazywebapp
 # Google Cloud Storage Credentials
 GCS_BUCKET=# Set bucket name here
 GCLOUD_PROJECT=lazywebapp
-GCS_KEYFILE= Google_Credentials/google_cloud_credentials.json
+GCS_KEYFILE=credentials/google_cloud_credentials.json
 
 # Amazon Web Services
 AWS_ACCESS_KEY_ID= # Set AWS Access Key here
