code review update - final

--- a/.env.example
+++ b/.env.example
@@ -28,9 +28,10 @@ FACEBOOK_APP_ID=
 TWITTER_HANDLE=lazywebapp
 
 # Set image service below. If none is set, local storage will be used by default
+# Default location for local storage is provided below
 
 # Google Cloud Storage Credentials
-GCS_BUCKET=# Set bucket name here
+GCS_BUCKET=null # Set bucket name here
 GCLOUD_PROJECT=lazywebapp
 GCS_KEYFILE=credentials/google_cloud_credentials.json
 
@@ -38,4 +39,7 @@ GCS_KEYFILE=credentials/google_cloud_credentials.json
 AWS_ACCESS_KEY_ID= # Set AWS Access Key here
 AWS_SECRET_ACCESS_KEY= # Set AWS Secret Access Key here
 region=us-east-2
-AWS_BUCKET=# Set bucket name here
+AWS_BUCKET=null # Set bucket name here
+
+IMAGE_SERVICE=null
+IMAGE_SAVE_LOCATION='../../src/assets/images/'
