Fixes to image upload

--- a/.env.example
+++ b/.env.example
@@ -31,15 +31,14 @@ TWITTER_HANDLE=lazywebapp
 # Default location for local storage is provided below
 
 # Google Cloud Storage Credentials
-GCS_BUCKET=null # Set bucket name here
-GCLOUD_PROJECT=lazywebapp
+GCS_BUCKET= # Set bucket name here e.g. site-images
+GCLOUD_PROJECT= # e.g. lazywebapp
 GCS_KEYFILE=credentials/google_cloud_credentials.json
 
 # Amazon Web Services
 AWS_ACCESS_KEY_ID= # Set AWS Access Key here
 AWS_SECRET_ACCESS_KEY= # Set AWS Secret Access Key here
-region=us-east-2
-AWS_BUCKET=null # Set bucket name here
+region= # e.g. us-east-2
+AWS_BUCKET= # Set bucket name here e.g. site-images
 
-IMAGE_SERVICE=null
-IMAGE_SAVE_LOCATION='../../src/assets/images/'
+LOCAL_IMAGE_SAVE_LOCATION='../local-image-store'
