--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ TWITTER_HANDLE=lazywebapp
 # Default location for local storage is provided below
 
 # Google Cloud Storage Credentials
-GCS_BUCKET= # Set bucket name here e.g. site-images
+GCS_BUCKET # Set bucket name here e.g. site-images
 GCLOUD_PROJECT= # e.g. lazywebapp
 GCS_KEYFILE=credentials/google_cloud_credentials.json
 
@@ -39,6 +39,6 @@ GCS_KEYFILE=credentials/google_cloud_credentials.json
 AWS_ACCESS_KEY_ID= # Set AWS Access Key here
 AWS_SECRET_ACCESS_KEY= # Set AWS Secret Access Key here
 region= # e.g. us-east-2
-AWS_BUCKET= # Set bucket name here e.g. site-images
+AWS_BUCKET # Set bucket name here e.g. site-images
 
 LOCAL_IMAGE_SAVE_LOCATION='../local-image-store'
