--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "dotenv": "^5.0.1",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "helmet": "^3.15.0",
@@ -63,11 +63,12 @@
     "mongoose": "^5.0.16",
     "ngx-webstorage": "^3.0.0-beta.13",
     "node-sass": "^4.11.0",
-    "nodemon": "^1.17.4",
+    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.1.0",
+    "tsc": "^1.20150623.0",
     "validator": "^10.2.0",
     "zone.js": "^0.8.26",
     "zxcvbn": "^4.4.2"
